Enable base defence from rush - Separate base defence code from CombatCommander - Add diagnostic information about base defence

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -42,6 +42,38 @@
           "value": "${env.VCPKG_CMAKE_BUILDFILE}"
         }
       ]
+    },
+    {
+      "name": "x86-Release No Debug",
+      "generator": "Visual Studio 15 2017",
+      "configurationType": "Release",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "buildRoot": "${workspaceRoot}\\build\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        {
+          "name": "CMAKE_TOOLCHAIN_FILE",
+          "value": "${env.VCPKG_CMAKE_BUILDFILE}"
+        }
+      ]
+    },
+    {
+      "name": "x86-Release MinSize",
+      "generator": "Visual Studio 15 2017",
+      "configurationType": "MinSizeRel",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "buildRoot": "${workspaceRoot}\\build\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
+      "ctestCommandArgs": "",
+      "variables": [
+        {
+          "name": "CMAKE_TOOLCHAIN_FILE",
+          "value": "${env.VCPKG_CMAKE_BUILDFILE}"
+        }
+      ]
     }
   ]
 }
