--- a/UAlbertaBot/bin/AK_Config.json
+++ b/UAlbertaBot/bin/AK_Config.json
@@ -1,128 +1,127 @@
 {
-    "Bot Info" :
-    {
-        "BotName"                   : "Andrey Kurdiumov",
-        "Authors"                   : "Andrey Kurdiumov, David Churchill",
-        "PrintInfoOnStart"          : false,
-        "BotMode"                   : "Tournament"
-    },
-        
-    "BWAPI" : 
-    {
-        "SetLocalSpeed"             : 0,
-        "SetFrameSkip"              : 0,
-        "UserInput"                 : true,
-        "CompleteMapInformation"    : false
-    },
-    
-    "Arena" :
-    {
-        "ArenaPlayerName"           : "HoldWC_NOK",
-        "ArenaOutputResults"        : 10,
-        "ArenaBattles"              : 1000
-    },
-    
-    "SparCraft" :
-    {
-        "SparCraftConfigFile"       : "SparCraft_Config.txt",
-        "CombatSimPlayerName"       : "AttackC"
-    },
-	
-    "Micro" :
-    {
-        "UseSparcraftSimulation"    : true,
-        "KiteWithRangedUnits"       : false,
-        "KiteLongerRangedUnits"     : ["Mutalisk", "Vulture"],
-        "WorkersDefendRush"         : true,
-        "DrawUnitTargetInfo"        : false,
-        "RetreatMeleeUnitShields"   : 0,
-        "RetreatMeleeUnitHP"        : 0,
-        "CombatEstimationStrategy"  : "sparcraft",
-        "InCombatRadius"            : 1000,
-        "RegroupRadius"             : 300,
-        "UnitNearEnemyRadius"       : 600
-    },
-    
-    "Macro" :
-    {
-        "BOSSFrameLimit"            : 160,
-        "WorkersPerRefinery"        : 3,
-        "BuildingSpacing"           : 1,
-        "PylonSpacing"              : 3
-    },
-	
-	"Log":
-	{
-		"ErrorLogFilename"          : "bwapi-data/AI/UAlbertaBot_ErrorLog.txt",
-        "LogAssertToErrorFile"      : false
-	},
+  "Bot Info": {
+    "BotName": "Andrey Kurdiumov",
+    "Authors": "Andrey Kurdiumov, David Churchill",
+    "PrintInfoOnStart": false,
+    "BotMode": "Tournament"
+  },
 
-    "Debug" :
-    {        
-        "DrawGameInfo"              : true,   
-        "DrawUnitHealthBars"        : true,
-        "DrawProductionInfo"        : true, 
-        "DrawBuildOrderSearchInfo"  : false,
-        "DrawScoutInfo"             : false,
-        "DrawEnemyUnitInfo"         : false,
-        "DrawModuleTimers"          : false,
-        "DrawResourceInfo"          : false,
-        "DrawCombatSimInfo"         : false,
-        "DrawBWTAInfo"              : false,
-        "DrawLastSeenTileInfo"      : false,
-        "DrawSquadInfo"             : false,
-        "DrawWorkerInfo"            : false,
-        "DrawMouseCursorInfo"       : false,
-        "DrawBuildingInfo"          : false,
-        "DrawReservedBuildingTiles" : false,
-        "DrawBOSSStateInfo"         : false,
-        "PrintModuleTimeout"        : false
-    },
-    
-    "Modules" :
-    {
-        "UseBuildOrderSearch"       : true,
-        "UseStrategyIO"             : true,
-        "UseAutoObserver"           : false,
-        
-        "ReadDirectory"             : "bwapi-data/read/",
-        "WriteDirectory"            : "bwapi-data/write/"
-    },
-    
-    "Tools" :
-    {
-        "MapGridSize"               : 320
+  "BWAPI": {
+    "SetLocalSpeed": 0,
+    "SetFrameSkip": 0,
+    "UserInput": true,
+    "CompleteMapInformation": false
+  },
+
+  "Arena": {
+    "ArenaPlayerName": "HoldWC_NOK",
+    "ArenaOutputResults": 10,
+    "ArenaBattles": 1000
+  },
+
+  "SparCraft": {
+    "SparCraftConfigFile": "SparCraft_Config.txt",
+    "CombatSimPlayerName": "AttackC"
+  },
+
+  "Micro": {
+    "UseSparcraftSimulation": true,
+    "KiteWithRangedUnits": false,
+    "KiteLongerRangedUnits": [ "Mutalisk", "Vulture" ],
+    "IncludeWorkers": true,
+    "WorkersDefendRush": true,
+    "DrawUnitTargetInfo": false,
+    "RetreatMeleeUnitShields": 0,
+    "RetreatMeleeUnitHP": 0,
+    "CombatEstimationStrategy": "sparcraft",
+    "InCombatRadius": 1000,
+    "RegroupRadius": 300,
+    "UnitNearEnemyRadius": 600
+  },
+
+  "Macro": {
+    "BOSSFrameLimit": 160,
+    "WorkersPerRefinery": 3,
+    "BuildingSpacing": 1,
+    "PylonSpacing": 3
+  },
+
+  "Log": {
+    "ErrorLogFilename": "bwapi-data/AI/UAlbertaBot_ErrorLog.txt",
+    "LogAssertToErrorFile": false
+  },
+
+  "Debug": {
+    "DrawGameInfo": true,
+    "DrawUnitHealthBars": true,
+    "DrawProductionInfo": true,
+    "DrawBuildOrderSearchInfo": false,
+    "DrawScoutInfo": false,
+    "DrawEnemyUnitInfo": false,
+    "DrawModuleTimers": false,
+    "DrawResourceInfo": false,
+    "DrawCombatSimInfo": false,
+    "DrawBWTAInfo": false,
+    "DrawLastSeenTileInfo": false,
+    "DrawSquadInfo": true,
+    "DrawWorkerInfo": false,
+    "DrawMouseCursorInfo": false,
+    "DrawBuildingInfo": false,
+    "DrawReservedBuildingTiles": false,
+    "DrawBOSSStateInfo": false,
+    "PrintModuleTimeout": false,
+    "TraceCombatManagerLogic": true
+  },
+
+  "Modules": {
+    "UseBuildOrderSearch": true,
+    "UseStrategyIO": true,
+    "UseAutoObserver": false,
+
+    "ReadDirectory": "bwapi-data/read/",
+    "WriteDirectory": "bwapi-data/write/"
+  },
+
+  "Tools": {
+    "MapGridSize": 320
+  },
+
+  "BaseDetection": {
+    "BaseDetectionStrategy": "uab"
+  },
+
+  "Strategy": {
+    "Protoss": "Protoss_ZealotRush",
+    "Terran": "Terran_MarineRush",
+    "Zerg": "Zerg_ZerglingRush",
+
+    "ScoutHarassEnemy": true,
+
+    "ReadDirectory": "bwapi-data/read/",
+    "WriteDirectory": "bwapi-data/write/",
+
+    "UseEnemySpecificStrategy": true,
+    "EnemySpecificStrategy": {
+      "BotName1": {
+        "Protoss": "Protoss_ZealotRush",
+        "Terran": "Terran_VultureRush",
+        "Zerg": "Zerg_ZerglingRush"
+      },
+      "BotName2": {
+        "Protoss": "Protoss_DragoonRush",
+        "Terran": "Terran_MarineRush",
+        "Zerg": "Zerg_ZerglingRush"
+      },
+      "LetaBot": {
+        "Protoss": "Protoss_ZealotRush",
+        "Terran": "Terran_4RaxMarines",
+        "Zerg": "Zerg_ZerglingRush"
+      }
     },
 
-    "BaseDetection": 
-    {
-         "BaseDetectionStrategy"    : "uab"
-    },
-
-    "Strategy" :
-    {
-        "Protoss"                   : "Protoss_ZealotRush",
-        "Terran"                    : "Terran_MarineRush",
-        "Zerg"                      : "Zerg_ZerglingRush",
-        
-        "ScoutHarassEnemy"          : true,
-        
-        "ReadDirectory"             : "bwapi-data/read/",
-        "WriteDirectory"            : "bwapi-data/write/",
-                
-        "UseEnemySpecificStrategy"  : true,
-        "EnemySpecificStrategy"     :
-        {
-            "BotName1"              : { "Protoss" : "Protoss_ZealotRush", "Terran" : "Terran_VultureRush", "Zerg" : "Zerg_ZerglingRush" },
-            "BotName2"              : { "Protoss" : "Protoss_DragoonRush", "Terran" : "Terran_MarineRush", "Zerg" : "Zerg_ZerglingRush" },
-            "LetaBot"               : { "Protoss" : "Protoss_ZealotRush", "Terran" : "Terran_4RaxMarines", "Zerg" : "Zerg_ZerglingRush" }
-        },
-        
-        "Strategies" :
-        {
-			"Protoss_ZealotRush": 
-			{
-				"Race": "Protoss",
+    "Strategies": {
+      "Protoss_ZealotRush": {
+        "Race": "Protoss",
         "OpeningBuildOrder": [
           "Probe",
           "Probe",
@@ -158,12 +157,11 @@
           "Probe",
           "Zealot",
           "Zealot",
-          "Zealot" 
+          "Zealot"
         ]
-			},
-			"Protoss_DragoonRush": 
-			{
-				"Race": "Protoss",
+      },
+      "Protoss_DragoonRush": {
+        "Race": "Protoss",
         "OpeningBuildOrder": [
           "Probe",
           "Probe",
@@ -192,12 +190,12 @@
           "Pylon",
           "Probe",
           "Dragoon",
-          "Dragoon", 
-          "Dragoon" ]
-			},
-			"Protoss_DTRush": 
-			{
-				"Race": "Protoss",
+          "Dragoon",
+          "Dragoon"
+        ]
+      },
+      "Protoss_DTRush": {
+        "Race": "Protoss",
         "OpeningBuildOrder": [
           "Probe",
           "Probe",
@@ -221,12 +219,12 @@
           "Dark_Templar",
           "Dark_Templar",
           "Probe",
-          "Pylon", 
-          "Probe" ]
-			},
-			"Protoss_Drop": 
-			{
-				"Race": "Protoss",
+          "Pylon",
+          "Probe"
+        ]
+      },
+      "Protoss_Drop": {
+        "Race": "Protoss",
         "OpeningBuildOrder": [
           "Probe",
           "Probe",
@@ -242,12 +240,12 @@
           "Probe",
           "Cybernetics_Core",
           "Probe",
-          "Gateway", 
-          "Robotics Facility" ]
-			},
-			"Terran_MarineRush": 
-			{
-				"Race": "Terran",
+          "Gateway",
+          "Robotics Facility"
+        ]
+      },
+      "Terran_MarineRush": {
+        "Race": "Terran",
         "OpeningBuildOrder": [
           "SCV",
           "SCV",
@@ -261,12 +259,12 @@
           "Marine",
           "Marine",
           "Marine",
-          "Marine", 
-          "Supply Depot" ]
-			},
-			"Terran_TankPush": 
-			{
-				"Race": "Terran",
+          "Marine",
+          "Supply Depot"
+        ]
+      },
+      "Terran_TankPush": {
+        "Race": "Terran",
         "OpeningBuildOrder": [
           "SCV",
           "SCV",
@@ -293,12 +291,12 @@
           "Tank Siege Mode",
           "Siege Tank Tank Mode",
           "Siege Tank Tank Mode",
-          "Siege Tank Tank Mode", 
-          "Siege Tank Tank Mode" ]
-			},
-			"Terran_4RaxMarines": 
-			{
-				"Race": "Terran",
+          "Siege Tank Tank Mode",
+          "Siege Tank Tank Mode"
+        ]
+      },
+      "Terran_4RaxMarines": {
+        "Race": "Terran",
         "OpeningBuildOrder": [
           "Barracks",
           "SCV",
@@ -312,12 +310,12 @@
           "Marine",
           "Marine",
           "Marine",
-          "Marine", 
-          "Marine" ]
-			},
-			"Terran_VultureRush": 
-			{
-				"Race": "Terran",
+          "Marine",
+          "Marine"
+        ]
+      },
+      "Terran_VultureRush": {
+        "Race": "Terran",
         "OpeningBuildOrder": [
           "SCV",
           "SCV",
@@ -338,23 +336,23 @@
           "SCV",
           "SCV",
           "SCV",
-          "Vulture", 
-          "Vulture" ]
-			},
-			"Zerg_ZerglingRush": 
-			{
-				"Race": "Zerg",
+          "Vulture",
+          "Vulture"
+        ]
+      },
+      "Zerg_ZerglingRush": {
+        "Race": "Zerg",
         "OpeningBuildOrder": [
           "Drone",
           "Spawning Pool",
           "Zergling",
           "Zergling",
-          "Zergling", 
-          "Zergling" ]
-			},
-			"Zerg_9Pool": 
-			{
-				"Race": "Zerg",
+          "Zergling",
+          "Zergling"
+        ]
+      },
+      "Zerg_9Pool": {
+        "Race": "Zerg",
         "OpeningBuildOrder": [
           "Drone",
           "Drone",
@@ -372,12 +370,12 @@
           "Hydralisk Den",
           "Drone",
           "Drone",
-          "Drone", 
-          "Drone" ]
-			},
-			"Zerg_2HatchHydra": 
-			{
-				"Race": "Zerg",
+          "Drone",
+          "Drone"
+        ]
+      },
+      "Zerg_2HatchHydra": {
+        "Race": "Zerg",
         "OpeningBuildOrder": [
           "Drone",
           "Drone",
@@ -417,12 +415,12 @@
           "Hydralisk",
           "Hydralisk",
           "Hydralisk",
-          "Hatchery", 
-          "Extractor" ]
-			},
-			"Zerg_3HatchMuta": 
-			{
-				"Race": "Zerg",
+          "Hatchery",
+          "Extractor"
+        ]
+      },
+      "Zerg_3HatchMuta": {
+        "Race": "Zerg",
         "OpeningBuildOrder": [
           "Drone",
           "Drone",
@@ -483,12 +481,12 @@
           "Mutalisk",
           "Mutalisk",
           "Mutalisk",
-          "Mutalisk", 
-          "Hatchery" ]
-			},
-			"Zerg_3HatchScourge": 
-			{
-				"Race": "Zerg",
+          "Mutalisk",
+          "Hatchery"
+        ]
+      },
+      "Zerg_3HatchScourge": {
+        "Race": "Zerg",
         "OpeningBuildOrder": [
           "Drone",
           "Drone",
@@ -555,9 +553,10 @@
           "Scourge",
           "Hatchery",
           "Extractor",
-          "Extractor", 
-          "Hatchery" ]
-			}
-        }
+          "Extractor",
+          "Hatchery"
+        ]
+      }
     }
+  }
 }
