--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ UAlbertaBot/UAB_ErrorLog.txt
 *.pd_
 UAlbertaBot/UAB_ErrorLog.txt
 BOSS/VisualStudio/BOSS.VC.db
+*.ipch
+*.db
+*.db-shm
+*.db-wal
+*.opendb
