--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -143,11 +143,17 @@
     </ClCompile>
     <ClCompile Include="..\Source\main.cpp" />
     <ClCompile Include="..\Source\UAlbertaBotModule.cpp" />
-    <ClCompile Include="..\Source\BaseLocation.cpp" />
-    <ClCompile Include="..\Source\BaseLocationManager.cpp" />
-    <ClCompile Include="..\Source\DMap.cpp" />
     <ClCompile Include="..\source\ScoutManager.cpp">
       <Filter>game\combat\micro</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\BaseLocation.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\BaseLocationManager.cpp">
+      <Filter>util</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Source\DMap.cpp">
+      <Filter>util</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -269,11 +275,17 @@
       <Filter>game\util</Filter>
     </ClInclude>
     <ClInclude Include="..\Source\UAlbertaBotModule.h" />
-    <ClInclude Include="..\Source\BaseLocation.h" />
-    <ClInclude Include="..\Source\BaseLocationManager.h" />
-    <ClInclude Include="..\Source\DMap.h" />
     <ClInclude Include="..\source\ScoutManager.h">
       <Filter>game\combat\micro</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\BaseLocation.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\BaseLocationManager.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Source\DMap.h">
+      <Filter>util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
