bug fixes, switch to grid, maptools

--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj
@@ -128,7 +128,7 @@
     <ClCompile Include="..\Source\CombatCommander.cpp" />
     <ClCompile Include="..\Source\Common.cpp" />
     <ClCompile Include="..\source\DetectorManager.cpp" />
-    <ClCompile Include="..\Source\DMap.cpp" />
+    <ClCompile Include="..\Source\DistanceMap.cpp" />
     <ClCompile Include="..\Source\main.cpp" />
     <ClCompile Include="..\Source\GameCommander.cpp" />
     <ClCompile Include="..\Source\InformationManager.cpp" />
@@ -172,10 +172,10 @@
     <ClInclude Include="..\Source\CombatCommander.h" />
     <ClInclude Include="..\Source\Common.h" />
     <ClInclude Include="..\source\DetectorManager.h" />
-    <ClInclude Include="..\Source\DistanceMap.hpp" />
-    <ClInclude Include="..\Source\DMap.h" />
+    <ClInclude Include="..\Source\DistanceMap.h" />
     <ClInclude Include="..\Source\GameCommander.h" />
     <ClInclude Include="..\Source\GameHistory.hpp" />
+    <ClInclude Include="..\Source\Grid.hpp" />
     <ClInclude Include="..\Source\InformationManager.h" />
     <ClInclude Include="..\source\JSONTools.h" />
     <ClInclude Include="..\Source\Logger.h" />
